usr/src/lib/libc/port/locale/runetype.h
@@ -97,19 +97,19 @@ typedef	int		__rune_t;	/* rune_t (see above) */
 /*
  * The lower 8 bits of runetype[] contain the digit value of the rune.
  */
-typedef struct {
+typedef struct _RuneEntry {
 	__rune_t	__min;		/* First rune of the range */
 	__rune_t	__max;		/* Last rune (inclusive) of the range */
 	__rune_t	__map;		/* What first maps to in maps */
 	unsigned	*__types;	/* Array of types in range */
 } _RuneEntry;
 
-typedef struct {
+typedef struct _RuneRange {
 	int		__nranges;	/* Number of ranges stored */
 	_RuneEntry	*__ranges;	/* Pointer to the ranges */
 } _RuneRange;
 
-typedef struct {
+typedef struct _RuneLocale {
 	char		__magic[8];	/* Magic saying what version we are */
 	char		__encoding[32];	/* ASCII name of encoding */
 
